// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should generate configuration for angularjs 1`] = `
"{
  \\"elements\\": [
    \\"html5\\"
  ],
  \\"extends\\": [
    \\"htmlvalidate:recommended\\"
  ],
  \\"transform\\": {
    \\"^.*\\\\\\\\.js$\\": \\"html-validate-angular/js\\",
    \\"^.*\\\\\\\\.html$\\": \\"html-validate-angular/html\\"
  }
}"
`;

exports[`should generate configuration for combined 1`] = `
"{
  \\"elements\\": [
    \\"html5\\",
    \\"html-validate-vue/elements\\"
  ],
  \\"extends\\": [
    \\"htmlvalidate:recommended\\"
  ],
  \\"transform\\": {
    \\"^.*\\\\\\\\.js$\\": \\"html-validate-angular/js\\",
    \\"^.*\\\\\\\\.html$\\": \\"html-validate-angular/html\\",
    \\"^.*\\\\\\\\.vue$\\": \\"html-validate-vue\\",
    \\"^.*\\\\\\\\.md$\\": \\"html-validate-markdown\\"
  }
}"
`;

exports[`should generate configuration for default 1`] = `
"{
  \\"elements\\": [
    \\"html5\\"
  ],
  \\"extends\\": [
    \\"htmlvalidate:recommended\\"
  ]
}"
`;

exports[`should generate configuration for markdown 1`] = `
"{
  \\"elements\\": [
    \\"html5\\"
  ],
  \\"extends\\": [
    \\"htmlvalidate:recommended\\"
  ],
  \\"transform\\": {
    \\"^.*\\\\\\\\.md$\\": \\"html-validate-markdown\\"
  }
}"
`;

exports[`should generate configuration for vuejs 1`] = `
"{
  \\"elements\\": [
    \\"html5\\",
    \\"html-validate-vue/elements\\"
  ],
  \\"extends\\": [
    \\"htmlvalidate:recommended\\"
  ],
  \\"transform\\": {
    \\"^.*\\\\\\\\.vue$\\": \\"html-validate-vue\\"
  }
}"
`;
